force-app/main/default/objects/FEC_Nature_of_Case__c/FEC_Nature_of_Case__c.object-meta.xml
<CustomObject>
    <description>Là bảng dữ liệu chứa bộ Nature of Case</description>
    <label>Nature of Cases</label>
    <nameField>
        <displayFormat>NOC-{0}</displayFormat>
        <label>Nature of Case Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Nature of Cases</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>