force-app/main/default/objects/FEC_Nature_of_Case__c/fields/FEC_Business_Process__c.field-meta.xml
<CustomField>
    <fullName>FEC_Business_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Thông tin luồng quy trình</description>
    <label>Business Process</label>
    <referenceTo>FEC_Business_Process__c</referenceTo>
    <relationshipName>Nature_of_Case</relationshipName>
    <type>Lookup</type>
</CustomField>