force-app/main/default/objects/FEC_Nature_Of_Case__c/fields/FEC_Category_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Category_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category Name</label>
    <referenceTo>FEC_Category__c</referenceTo>
    <relationshipLabel>FEC Nature Of Case</relationshipLabel>
    <relationshipName>FEC_Nature_Of_Case</relationshipName>
    <type>Lookup</type>
</CustomField>