force-app/main/default/objects/FEC_Nature_of_Case__c/fields/FEC_Category_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Category_Status__c</fullName>
    <formula>FEC_Category__r.FEC_Active__c</formula>
    <label>Category Status</label>
    <type>Checkbox</type>
</CustomField>