force-app/main/default/objects/FEC_Nature_of_Case__c/fields/FEC_Do_Not_Bother__c.field-meta.xml
<CustomField>
    <fullName>FEC_Do_Not_Bother__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Bother</label>
    <type>Checkbox</type>
</CustomField>