force-app/main/default/objects/FEC_Nature_of_Case__c/fields/FEC_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Product_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Thông tin loại sản phẩm</description>
    <label>Product Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FEC_Product_Type__c.FEC_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FEC_Product_Type__c</referenceTo>
    <relationshipLabel>Nature of Cases</relationshipLabel>
    <relationshipName>Nature_of_Case</relationshipName>
    <type>Lookup</type>
</CustomField>