force-app/main/default/objects/FEC_Nature_Of_Case__c/fields/FEC_Product_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Product_Type_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Type Name</label>
    <referenceTo>FEC_Product_Type__c</referenceTo>
    <relationshipLabel>FEC Nature Of Case</relationshipLabel>
    <relationshipName>FEC_Nature_Of_Case</relationshipName>
    <type>Lookup</type>
</CustomField>