force-app/main/default/objects/FEC_Nature_of_Case__c/fields/FEC_Product_Type_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Product_Type_Status__c</fullName>
    <formula>FEC_Product_Type__r.FEC_Active__c</formula>
    <label>Product Type Status</label>
    <type>Checkbox</type>
</CustomField>