force-app/main/default/objects/FEC_Nature_of_Case__c/fields/FEC_Remove_Phone__c.field-meta.xml
<CustomField>
    <fullName>FEC_Remove_Phone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove Phone</label>
    <type>Checkbox</type>
</CustomField>