force-app/main/default/objects/FEC_Nature_of_Case__c/fields/FEC_Sub_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_Sub_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Thông tin danh mục con</description>
    <label>Sub Code</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FEC_Sub_Code__c.FEC_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FEC_Sub_Code__c</referenceTo>
    <relationshipLabel>Nature of Cases</relationshipLabel>
    <relationshipName>Nature_of_Case</relationshipName>
    <type>Lookup</type>
</CustomField>