force-app/main/default/objects/FEC_Nature_of_Case__c/fields/FEC_Sub_Code_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Sub_Code_Status__c</fullName>
    <formula>FEC_Sub_Category__r.FEC_Active__c</formula>
    <label>Sub Code Status</label>
    <type>Checkbox</type>
</CustomField>