force-app/main/default/objects/FEC_Nature_of_Case__c/fields/FEC_Transfer_Call_to_Collection__c.field-meta.xml
<CustomField>
    <fullName>FEC_Transfer_Call_to_Collection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transfer Call to Collection</label>
    <type>Checkbox</type>
</CustomField>